--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "uuid": "^9.0.1"
   }
 }
